# mapping_dataset_styria

./: CMakeLists.txt  README.md  package.xml
config/: mapping_plattform.rviz  vehicle.rviz
config/laser/mapping_plattform/: lidar.json  lidar.yaml
config/laser/vehicle/: lidar_front.json  lidar_front.yaml  lidar_middle_left.json  lidar_middle_left.yaml  lidar_middle_right.json  lidar_middle_right.yaml  lidar_top.json  lidar_top.yaml
config/lio_sam/: vehicle_ouster_params.yaml
gpx/: 1_university_campus.kml  2_campus_murpark.kml  3_murpark_a2_murpark.kml  4_murpark_campus.kml  5_vehilce_4_lidars.kml  6_campus_city_center_campus.kml  inner_city.gpx  park.gpx
launch/: lio_sam_vehicle.launch  ouster_config_file.launch  replay_mapping_plattform.launch  replay_vehicle.launch
